force-app/main/default/objects/ApplicantExpense__c/ApplicantExpense__c.object-meta.xml
<CustomObject>
    <description>Object to record various expenses of Applicants</description>
    <label>Applicant Expense</label>
    <nameField>
        <displayFormat>AE-{00000}</displayFormat>
        <label>Applicant Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicant Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>